Basic_K8S/clusterIP_nginx.yaml
apiVersion: v1 
kind: Service
metadata:
 name: service-clusterip
 spec:
 type: ClusterIP 
 selector:
  app: nginx 
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
